<?xml version="1.0"?>
<package format="2">
  <name>razor_imu_9dof</name>
  <version>0.0.0</version>
  <description>ROS2 Package for Sparkfun Razor IMU. </description>
  <maintainer email="esteve@osrfoundation.org">Abhishek N. Kulkarni</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>diagnostic_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>